Refactor: extract magic numbers into constants, modernize collections/path usage, and clean up minor docs/comments/i18n alt attributes (no functional changes).